# terraform-webapp

function/data-upserter/: Dockerfile  app.py  pyproject.toml  truncate.sql  upserter_apn_taxnum.sql  upserter_buyer_seller.sql  upserter_property_master.sql  upserter_starterdata.sql
function/lets_chat/: Dockerfile  README.md  app.py  pyproject.toml
function/lets_chat/lets_chat/: LetsChat.py
function/lets_chat/tests/: test_contact_us.py
migrations/: Dockerfile  alembic.ini  app.py  pyproject.toml
migrations/alembic/: env.py
migrations/alembic/versions/: 5b58fc6385fd_create_apn_taxnum_blue.py  981b8f3515dc_create_apn_taxnum_staging_blue.py
migrations/database/: __init__.py
tf/: .terraform.lock.hcl  .terraform.tfstate.lock.info  cert.tf  ecr.tf  lambda.tf  load-balancer.tf  locals.tf  nat-gateway.tf  networking.tf  provider.tf  rds.tf  remote-state.tf  s3-bucket.tf  security-group.tf  terraform.tfstate  terraform.tfstate.backup  variable.tf  vpc.tf
tf/modules/lambda_images/: docker.tf  lambda.tf  outputs.tf  variables.tf
